# LP_2020_2021

./: README.md
basedadosMoveis/: CMakeLists.txt
basedadosMoveis/src/: main.c
basedadosMoveis/src/model/: admin.h  client.h  furniture.h  order.h  state.c  state.h
basedadosMoveis/src/util/: array.c  array.h  input.c  input.h  menu_manager.c  menu_manager.h
basedadosMoveis/src/views/: main_menus.c  main_menus.h
